--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 
 body{
     font-family: poppins;
+    background-color: rgb(241, 241, 241);
 }
 
 a{
@@ -27,7 +28,7 @@ nav{
     position: fixed;
     width: 100%;
     height: 15vh;
-    background-color: rgba(0, 195, 255, 0.7);
+    background-color: rgba(0, 120, 255, 0.7);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,6 +36,8 @@ nav{
 }
 
 nav ul li h4{
+    width: auto;
+    height: auto;
     color: white;
     padding: 10px;
 }
@@ -51,16 +54,24 @@ nav a img{
     height: 70%;
 }
 
+body nav ul li .dropdown{
+    transition: all 0.4s;
+}
+
 .dropdown{
     display: none;
+    opacity: 0%;
+    
 }
 
 nav ul li:hover .dropdown{
+    
+    opacity: 100%;
     display: block;
     position: absolute;
-    top: 10vh;
+    top: 15vh;
     right: 0;
-    background-color: rgba(0, 195, 255, 0.7);
+    background-color: rgba(0, 120, 255, 0.7);
     border-radius: 0  0 10px 10px ;
 }
 
@@ -104,6 +115,35 @@ nav ul li:hover .dropdown{
 }
 
 
+/* RESPONSIVE */
+
+@media (max-width: 550px) {
+    body .container2 .data{
+        flex-direction: column;
+    }
+
+    .container2 .data .utama{
+        height: 50%;
+        width: 100%;
+    }
+
+    .container2 .data .kedua{
+        height: 50%;
+        width: 100%;
+    }
+
+
+}
+
+/* Animasi Mengambang */
+
+.mengambang:hover{
+    transform:scale(1.1) ;
+    box-shadow: -5px 10px 15px rgba(0, 0, 0, 0.35)  ;
+}
+
+
+
 /* Video */
 .container1{
     width: 100%;
@@ -119,37 +159,45 @@ nav ul li:hover .dropdown{
 
 .container2{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     /* border: 2px solid red; */
     padding: 5%;
 }
+
 
 .container2 .data{
     height: 100%;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
     padding: 5%;
     /* border: 3px solid rgb(0, 185, 225); */
-    border-radius: 20px ;
-    box-shadow: -5px 5px 15px rgb(0, 195, 255);
+    border-radius: 30px ;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+    background-color: rgba(255, 255, 255, 0.75);
+
+    
 }
 
 
 
 .data .utama{
-    /* color: rgb(0, 104, 173); */
     width: 50%;
     height: 100%;
     display: flex;
     flex-direction: column;
     background-color: rgb(255, 255, 255) ;
-    box-shadow: -5px 5px 15px rgb(0, 195, 255);
+    /* box-shadow: -5px 5px 15px rgb(0, 195, 255); */
     border-radius: 40px;
-    justify-content: center;
+    justify-content: space-evenly;
     text-align: center;
     align-items: center;
     padding: 5%;
+
+    transition: all 0.4s;
 }
 
 .utama p{
@@ -162,33 +210,47 @@ nav ul li:hover .dropdown{
 
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     text-align: center;
     align-items: center;
     padding: 5%;
     flex-wrap: wrap;
 }
 
-.data .kedua .isi_data{
+.data .kedua .data_tentang{
     /* color: rgb(0, 101, 168); */
-    padding: 10px;
+    padding: 10px 20px;
     margin: 10px;
+    width: 100%;
 
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    /* justify-content: space-evenly ; */
     align-items: center;
     background-color:  rgb(255, 255, 255);
-    box-shadow: -5px 5px 15px rgb(0, 195, 255);
+    /* box-shadow: -5px 5px 15px rgb(0, 195, 255); */
     border-radius: 10px;
+
+    transition: all 0.4s;
+}
+
+.data .kedua .data_tentang img{
+    width: 50px;
+    height: 50px;
+    
+
 }
 
 
-.pengelola .isi .card img{
-    height :100px;
+.data .kedua .data_tentang .isi_data{
     width: 100%;
-    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
+
 
 
 /* PENGELOLA */
@@ -207,9 +269,10 @@ nav ul li:hover .dropdown{
 }
 
 .pengelola{
-    padding: 20px;
+    padding: 40px;
     background-color: rgba(255, 255, 255, 0.75);
-    border-radius: 10%;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
 }
 
 .pengelola .judul{
@@ -217,7 +280,7 @@ nav ul li:hover .dropdown{
 }
 
 .pengelola .judul h3{
-    margin: 20px;
+    margin:  0 20px 20px;
 
 }
 
@@ -232,8 +295,8 @@ nav ul li:hover .dropdown{
 }
 
 .pengelola .isi .card{
-    height: 280px;
-    width: 200px;
+    height: 350px;
+    width: 250px;
     padding: 10px;
     margin: 10px;
     display: flex;
@@ -242,15 +305,17 @@ nav ul li:hover .dropdown{
     align-items: center;
     padding: 10px;
     background-color: white;
-    box-shadow: -5px 5px 10px rgb(0, 195, 255)  ;
-    border-radius: 10%;
+    
+    border-radius: 30px;
 
-    transition: all 0.2s;
+    transition: all 0.4s;
 
 }
 
-.pengelola .isi .card:hover{
-    transform:scale(1.1) ;
+.pengelola .isi .card img{
+    height :auto;
+    width: 100%;
+    border-radius: 10px;
 }
 
 .pengelola .isi .card span{
@@ -270,6 +335,7 @@ nav ul li:hover .dropdown{
     width: 100%;
     padding: 7%;
     box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
+    background-color: white;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -291,6 +357,7 @@ nav ul li:hover .dropdown{
     width: 100%;
     padding: 7%;
     box-shadow: -10px 10px 20px rgba(0, 225, 255, 0.5);
+    background-color: white;
     border-radius: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -302,6 +369,7 @@ nav ul li:hover .dropdown{
 .visimisi .visi{
     padding: 20px;
     box-shadow: -5px 5px 10px rgba(0, 225, 255, 0.5);
+    background-color: white;
     border-radius: 20px;
     margin: 20px 0;
     display: flex;
@@ -338,6 +406,7 @@ nav ul li:hover .dropdown{
     width: 100%;
     padding: 7%;
     box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
+    background-color: white;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -368,6 +437,7 @@ nav ul li:hover .dropdown{
     width: 100%;
     padding: 7%;
     box-shadow: -10px 10px 20px rgba(0, 225, 255, 0.5);
+    background-color: white;
     border-radius: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -407,12 +477,12 @@ footer{
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: rgba(0, 195, 255, 0.7);
+    background-color: rgba(0, 120, 255, 0.7);
 }
 
 footer h3{
-    padding: 10px;
-    /* color: white; */
+    padding: 15px;
+    color: white;
 }
 
 footer .sosmet{
@@ -425,7 +495,7 @@ footer .sosmet{
 footer .sosmet a{
     display: flex;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(235, 235, 235, 0.5);
     border-radius: 100%;
     align-items: center;
     justify-content: center;
@@ -433,19 +503,22 @@ footer .sosmet a{
 }
 
 footer .sosmet .wa:hover{
-    background-color: rgba(0, 255, 0, 0.3);
+    background-color: rgba(0, 255, 0, 0.5);
+    box-shadow: -5px 3px 10px rgba(0, 0, 0, 0.5);
     transition: all 0.2s;
     transform: scale(1.2);
 }
 
 footer .sosmet .ig:hover{
     background-color: rgba(255, 0, 100, 0.5);
+    box-shadow: -5px 3px 10px  rgba(0, 0, 0, 0.5);
     transition: all 0.2s;
     transform: scale(1.2);
 }
 
 footer .sosmet .fb:hover{
-    background-color: rgba(0, 0, 255, 0.3);
+    background-color: rgba(0, 0, 255, 0.5);
+    box-shadow: -5px 3px 10px  rgba(0, 0, 0, 0.5);
     transition: all 0.2s;
     transform: scale(1.2);
 }
@@ -458,7 +531,8 @@ footer .sosmet a img{
 }
 
 footer .copy{
+    color: white;
     padding: 10px;
     width: 100%;
-    background-color: rgb(0, 200, 255);
+    background-color: rgb(0, 120, 255);
 }
