--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ nav{
     z-index: 99;
     position: fixed;
     width: 100%;
-    height: 15vh;
-    background-color: rgba(0, 70, 220, 0.7);
+    min-height: 10vh;
+    background-color: rgba(0, 70, 220, 0.8);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -63,25 +63,39 @@ body nav ul li .dropdown{
 }
 
 .dropdown{
-    display: none;
-    opacity: 0%;
+    opacity: 0;
+    display: block;
+    position: absolute;
+    right: 0;
+    pointer-events: none;
+
     
 }
 
 nav ul li:hover .dropdown{
-    
-    opacity: 100%;
+    pointer-events: auto;
+    opacity: 100;
     display: block;
     position: absolute;
-    top: 15vh;
     right: 0;
-    background-color: rgba(0, 70, 220, 0.7);
+    
+    background-color: rgba(0, 70, 220, 0.8);
     border-radius: 0  0 10px 10px ;
 }
 
 .dropdown ul li{
-    padding: 10px;
+    padding: 16px;
     text-align: left;
+    border-radius: 10px;
+    transition: all 0.3s;
+}
+
+.dropdown ul li:hover{
+    background-color:  rgba(0, 50, 160, 0.75);
+}
+
+.dropdown ul li a{
+    padding: 5px;
 }
 
 /* Sampul */
@@ -140,7 +154,7 @@ nav ul li:hover .dropdown{
         margin: 0 10px;
         padding: 50px;
     
-        height: 100%;
+        height: 105%;
         width: 100%;
         
         text-align: center;
@@ -183,7 +197,7 @@ nav ul li:hover .dropdown{
 /* Video */
 .container1{
     width: 100%;
-    height: 100vh;
+    height: 105vh;
     margin-bottom: 50px;
     display: flex;
     justify-content: center;
@@ -194,8 +208,10 @@ nav ul li:hover .dropdown{
 .container1 video{
     position: absolute;
     object-fit: cover;
-    height: 100%;
+    height: 105%;
     width: 100%;
+    border-radius: 0 0 20px 20px;
+    box-shadow: -5px 10px 15px  rgba(0, 10, 100, 0.35);
 }
 
 
@@ -267,7 +283,7 @@ nav ul li:hover .dropdown{
 
 .data .kedua .data_tentang{
     /* color: rgb(0, 101, 168); */
-    padding: 10px 20px;
+    padding: 15px;
     margin: 10px;
     width: 100%;
 
@@ -277,16 +293,21 @@ nav ul li:hover .dropdown{
     align-items: center;
     background-color:  rgb(255, 255, 255);
     /* box-shadow: -5px 5px 15px rgb(0, 195, 255); */
-    border-radius: 10px;
+    border-radius: 15px;
 
     transition: all 0.4s;
 }
 
 .data .kedua .data_tentang img{
-    width: 50px;
-    height: 50px;
-    
+    width: 75px;
+    height: 75px;
+    padding: 10px;
+    border-radius: 15px;
+    transition: all 0.6s;
+}
 
+.data .kedua .data_tentang:hover img{
+    background-color: rgba(0, 70, 220, 0.7);
 }
 
 
@@ -412,20 +433,20 @@ span.warna{
     flex-wrap: wrap;
     align-items: center;
     margin: 30px 0;
-    padding: 10px;
+    padding: 20px;
     border-radius: 20px;
     transition: all 0.6s;
     background-color: white;
 }
 
 .daftar_program .program:hover img{
-    background-color: rgba(30, 90, 225, 0.6);
+    background-color: rgba(0, 70, 220, 0.7);
     
 }
 
 .daftar_program .program img{
-    width: 100px;
-    height: 100px;
+    width: 115px;
+    height: 115px;
     padding: 20px;
     border-radius: 20px;
     transition: all 0.8s;
@@ -441,6 +462,7 @@ span.warna{
 }
 
 .daftar_program .program .isi_program p{
+    margin-top: 5px;
     display: flex;
     flex-wrap: wrap;
     
