--- a/style.css
+++ b/style.css
@@ -579,9 +579,9 @@ span.warna{
 .container7 .visimisi{
     width: 100%;
     padding: 7%;
-    box-shadow: -10px 10px 20px rgba(0, 225, 255, 0.5);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
     background-color: white;
-    border-radius: 20px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -589,11 +589,23 @@ span.warna{
     align-items: center;
 }
 
+.container7 .visimisi h2{
+    margin-bottom: 30px;
+}
+
+.container7 .visimisi h2 span{
+    color: white;
+    padding: 20px 50px;
+    border-radius: 20px;
+    background-color: rgba(0, 70, 220, 0.7);
+
+}
+
 .visimisi .visi{
     padding: 20px;
-    box-shadow: -5px 5px 10px rgba(0, 225, 255, 0.5);
+    transition: all 0.4s;
+    border-radius: 30px;
     background-color: white;
-    border-radius: 20px;
     margin: 20px 0;
     display: flex;
     flex-direction: column;
@@ -605,8 +617,9 @@ span.warna{
 
 .visimisi .misi{
     padding: 20px;
-    box-shadow: -5px 5px 10px rgba(0, 225, 255, 0.5);
-    border-radius: 20px;
+    transition: all 0.4s;
+    border-radius: 30px;
+    background-color: white;
     margin: 20px 0;
     display: flex;
     flex-direction: column;
@@ -620,6 +633,8 @@ span.warna{
     padding: 10px;
 }
 
+
+/* Susunan Pengurus */
 .container8{
     width: 100%;
     padding: 10%;
