--- a/style.css
+++ b/style.css
@@ -673,36 +673,83 @@ span.warna{
 
 .container9{
     width: 100%;
-    padding: 10%;
+    padding: 10% 5%;
 }
 .container9 .kontak{
-    width: 100%;
-    padding: 7%;
-    box-shadow: -10px 10px 20px rgba(0, 225, 255, 0.5);
-    background-color: white;
-    border-radius: 20px;
+    box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
+    padding: 30px;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
-.kontak{
+.kontak h2{
+    margin: 40px 20px;
+    text-align: center;
+}
+
+.info{
+    width: 100%;
     display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+
+.map iframe{
+    width: 350px;
+    height: 350px;
+    padding: 20px;
+    border: none;
+}
+
+.info_alamat{
+    max-width: 600px;
+    padding: 20px;
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    
+}
+
+.info_alamat .alamat{
+    margin: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+
+    
+}
+
+.info_alamat .alamat .data_alamat{
+    display: flex;
+    justify-content: center;
     flex-direction: column;
 }
 
-.kontak .alamat{
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.kontak .alamat img{
+.info_alamat  .alamat img{
     height: 50px;
     width: 50px;
+    margin: 10px;
+}
+
+
+.info_alamat .alamat.location:hover img.location{
+    background-image: url(aset/icon/location_color.png);
+    background-position: center;
+    background-size: 100%;
+}
+.info_alamat .alamat.phone:hover img.phone{
+    background-image: url(aset/icon/phone_color.png);
+    background-position: center;
+    background-size: 100%;
+}
+.info_alamat .alamat.mail:hover img.mail{
+    background-image: url(aset/icon/mail_color.png);
+    background-position: center;
+    background-size: 100%;
 }
 
 
