--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav a img{
     
     width : 70%;
     padding: 10px 20px 10px 10px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.75);
     border-radius: 20px;
 }
 nav a img.kecil{
@@ -582,8 +582,16 @@ span.warna{
     align-items: center;
 }
 
-.container6 .sejarah p.pertama{
+.container6 .sejarah .isi_sejarah{
     margin-top: 50px;
+}
+
+.sejarah .isi_sejarah{
+    text-align: left;
+}
+
+.sejarah .isi_sejarah ol{
+    margin-left: 20px;
 }
 
 /* Visi Misi */
@@ -846,4 +854,9 @@ footer .copy{
     padding: 10px;
     width: 100%;
     background-color: rgb(0, 70, 220);
+}
+
+footer .copy a{
+    color: white;
+    text-decoration: none;
 }
